Updates from Overleaf

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -256,57 +256,20 @@
 \end{outerlist}
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{AWARDS, FELLOWSHIPS, \& GRANTS}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-6pt}
-\begin{outerlist}
-
-\item [\textbf{\href{https://www.ru.nl/radboudinternational/english/internationalisation/radboud-western-collaboration-fund/}{Western-Radboud Collaboration Fund (co-applicant)}}] \hfill \textbf{2022--}
- 
-\begin{innerlist}
-  \item Partner in collaboration on governance of artificial intelligence (AI) systems.
-
- \end{innerlist}
- 
- \item [\textbf{\href{https://ru.nl}{DCC Student Assistantship Funding}}] \hfill \textbf{2022}
- 
-\begin{innerlist}
-  \item Designed and obtained funding for mentoring a student assistant for a project on multiple realisability; to aid in creation of a computer simulation environment.
- \end{innerlist}
- 
-
-
-\item[\textbf{\href{https://shuttleworthfoundation.org/fellows/flash-grants/}{Shuttleworth Foundation Flash Grant}}: \$5,000] \hfill \textbf{2021}
-\begin{innerlist}
-  \item Funding is in recognition of my work as a `` social change agent'', based on nominations from Shuttleworth Flash Fellows.
-\end{innerlist}
-
-\item [\textbf{\href{https://ru.nl}{Nomination for Faculty of Social Sciences Junior Education Prize}}] \hfill \textbf{2021}
- 
-\begin{innerlist}
-  \item Nominated by the student representatives of the BSc Degree Programme Committee.
- \end{innerlist}
-
-
-\item[\textbf{\href{https://www.software.ac.uk/about/fellows/olivia-guest}{Software Sustainability Institute Fellowship}}: £3,000] \hfill \textbf{2017}
-   
-
-\end{outerlist}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{EDITORIAL ROLES}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-6pt}
+\vspace{-10pt}
+
 \begin{outerlist}
+   \item[\textbf{\href{https://joss.theoj.org/}{The Journal of Open Source Software}} --- \textit{Joint Editor-in-Chief}] \hfill \textbf{2022--}
+
 
    \item[\textbf{\href{https://www.tandfonline.com/action/journalInformation?show=editorialBoard&journalCode=oaps20}{Cogent Psychology}} --- \textit{Editorial Board}] \hfill \textbf{2021--}
 
 
    \item[\textbf{\href{http://rescience.github.io/}{ReScience C Journal}} --- \textit{Editor-in-Chief}] \hfill \textbf{2020--}
    
-   \item[\textbf{\href{https://joss.theoj.org/}{The Journal of Open Source Software}} --- \textit{Topic Editor}] \hfill \textbf{2019--}
+   \item[\textbf{\href{https://joss.theoj.org/}{The Journal of Open Source Software}} --- \textit{Topic Editor}] \hfill \textbf{2019--2022}
 
    \item[\textbf{\href{http://rescience.github.io/}{ReScience C Journal}} --- \textit{Associate Editor}] \hfill \textbf{2015--2020}
 
@@ -319,100 +282,54 @@
    
    
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{REVIEWING}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-6pt}
 
- \item[\textbf{Conferences (ad hoc reviewing)}] \hfill
-           \begin{innerlist}
-          \item []    International Conference on Learning Representations (ICLR), International Conference on Cognitive Modelling (ICCM), International Conference on Machine Learning (ICML), Scientific Computing with Python Conference (SciPy), EnviroInfo.
-        \end{innerlist}
-  
-   \item[\textbf{Journals (ad hoc reviewing)}] \hfill
-          \begin{innerlist}
-          \item [] Cognitive Neuropsychology,  Cognitive Psychology, Cognitive Science Journal, Journal of Cognitive Neuroscience, Journal of Open Source Education, Memory \& Cognition, PeerJ, PLoS Computational Biology, Royal Society Open Science, Topics in Cognitive Science.
-        \end{innerlist}
 
    
     \end{outerlist}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{TEACHING}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-\textbf{\href{https://www.ru.nl/courseguides/socsci/bachelor/artificial-intelligence/ai-department/who-we/}{School of Artificial Intelligence}, \href{https://ru.nl}{Radboud}, NL}
-\begin{outerlist}
-    \item[Assistant Professor] \hfill \textbf{2021--}
-    \item[Postdoctoral Research Assistant] \hfill \textbf{2021}
-    \item[\textit{\href{https://www.ru.nl/courseguides/socsci/courses-osiris/ai/sow-bki332-ai-science/}{AI as a Science}}] \
-  \begin{innerlist}
-    \item Module: 3EC \textit{Third Year, B.Sc.}
-    \item Designed course from the ground up.
-    \item Redesigned course (since in its 2nd year it has 10 times the students; from 5 to 50).
-  \end{innerlist}
-      \item[\textit{\href{https://www.ru.nl/courseguides/socsci/courses-osiris/ai/sow-mki56-theoretical-foundations-for-cognitive/}{Theoretical Foundations for Cognitive Agents}}] \
-  \begin{innerlist}
-    \item Module: 6EC \textit{M.Sc.}
-    \item Redesigned course from the ground up.
-  \end{innerlist}
-\end{outerlist}
-\vspace{8pt}
-
-
-
-\textbf{\href{http://www.psy.ox.ac.uk/}{Department of Experimental Psychology}, \href{http://ox.ac.uk/}{University of Oxford}, UK}
-\begin{outerlist}
-    \item[Postdoctoral Research Assistant] \hfill \textbf{2014--2016}
-    \item[\textit{\href{http://oliviaguest.com/connectionism}{Block Practical: Connectionist Models and Cognitive Processes}}] \
-  \begin{innerlist}
-    \item Module: \textit{Third Year, B.Sc.}
-    \item Designed course structure and materials (slides and exercises).
-    \item Students replicated from scratch Tyler et al. (2000) in Python.
-    \item Created course website: \href{http://oliviaguest.com/connectionism}{oliviaguest.com/connectionism}.
-  \end{innerlist}
-      \item[\textit{Tutorial: Language and Cognition}] \
-  \begin{innerlist}
-    \item Module: \textit{Second Year, B.Sc.}
-    \item Set essays and marked exams.
-  \end{innerlist}
-\end{outerlist}
-\vspace{8pt}
-
-\textbf{\href{http://www.bbk.ac.uk/psychology/}{Department of Psychological Sciences}, \href{http://www.bbk.ac.uk/}{Birkbeck, University of London},
-UK}
-\begin{outerlist}
-   \item[Graduate Teaching Assistant] \hfill \textbf{2010--2014}
-   \item Modules Taught: \textit{General Foundations of Psychology,
-   Psychobiology, Advanced Research Methods, Advanced Quantitative Methods, Memory and Cognition, Matlab Programming for Psychological Science, }
-\end{outerlist}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-   
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{SUPERVISION \& MENTORING}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\vspace{-6pt}
+\vspace{-8pt}
 
 
 \begin{outerlist}
  
-    \item[\textbf{Research project}] \hfill \textbf{2020--}
+   % \item[\textbf{Donders Centre for Cognition, Radboud University, Netherlands, Assistant Professor}] \hfill \textbf{2021--}
+    
+     \item[\textbf{Computational Cognitive Science (CCS) group}] \hfill 2022
+
       \begin{innerlist}
-        \item Lelia Erscoi (BSc student, Radboud University)
-        \item Rory Spanton (PhD candidate, University of Plymouth)
-        \item Prerna Aneja (PhD candidate, University of East Anglia)
+       \item mentoring of junior assistant professor and postdoc
+       \item contributing to vision and strategic management of \textit{CCS} 
+    \end{innerlist}  
+    
+    
+
+    \item[\textbf{Research projects}] \hfill
+      \begin{innerlist}
+        \item Sara Østergaard (MSc student, Aarhus University) \hfill 2022--
+        \item Lelia Erscoi (BSc student, Radboud University) \hfill 2021--
+        \item Rory Spanton (PhD candidate, University of Plymouth) \hfill 2021--22
+        \item Prerna Aneja (PhD candidate, University of East Anglia) \hfill 2020--22
     \end{innerlist}  
 
-  
-      \item[\textbf{Thesis supervision}] \hfill \textbf{2022}
+    \item[\textbf{Student research assistant}] \hfill
       \begin{innerlist}
-        \item Noa Baijens (BSc thesis, 2022)
-        \item Lelia Erscoi (BSc thesis, 2022)
-        \item Evelien van Dijk (BSc thesis, 2022)
-        \item Joost Vossers (BSc thesis, 2022)
+        \item Manthan Gadhia (BSc student, Radboud University) \hfill 2022--
+    \end{innerlist}  
+  
+      \item[\textbf{Thesis supervision}] \hfill
+      \begin{innerlist}
+        \item Avantika Karir (BSc) \hfill 2022
+        \item Arina Schippers (BSc) \hfill 2022
+        \item Amany Osman (BSc) \hfill 2022
+        \item Luc van der Gun (Bsc) \hfill 2022
+        \item Leah van Oorschot (BSc) \hfill 2022
+        
+        \item Noa Baijens (BSc) \hfill 2021
+        \item Lelia Erscoi (BSc) \hfill 2021
+        \item Evelien van Dijk (BSc) \hfill 2021
+        \item Joost Vossers (BSc) \hfill 2021
     \end{innerlist}
     
  
@@ -422,14 +339,37 @@ UK}
          \item  Students (especially in neuroscience and psychology) pop in for advice and mentoring.
 
   \end{innerlist}
-  
-    \item[\textbf{Other supervision/mentoring}] \hfill \textbf{2010--}
 
+
+
+  \item[\textbf{DCCN, Senior Postdoc}] \hfill \textbf{2020--2021}
       \begin{innerlist}
-        \item Contributed to various projects through supervision and mentoring of students and junior researchers at
-        Birkbeck College, University of Oxford, University College London, \& Radboud University.
+        \item mentored PhD candidates 
+        \item trained PhD candidates in programming and neural network modeling.
+         \item  mentored Master students in how to apply for PhD positions.
+  \end{innerlist}
+  
+    \item[\textbf{CYENS, Cyprus, Independent Researcher}] \hfill \textbf{2019--2020}
+      \begin{innerlist}
+        \item mentored PhD candidates 
+        \item trained PhD candidates in programming and neural network modeling.
+         \item  mentored Master students in how to apply for PhD positions.
+  \end{innerlist}
 
-     \end{innerlist}
+
+
+    \item[\textbf{Department of Experimental Psychology, UCL, Senior Postdoc}] \hfill \textbf{2016--2019}
+      \begin{innerlist}
+        \item mentored PhD candidates and junior postdocs.
+        \item trained PhD candidates and junior postdocs in computational modeling, programming and neural network modeling.
+  \end{innerlist}
+
+
+    \item[\textbf{Department of Experimental Psychology, University of Oxford, Postdoc}] \hfill \textbf{2014--2016}
+      \begin{innerlist}
+        \item mentored PhD candidates.
+        \item trained PhD candidates in computational modeling and programming.
+  \end{innerlist}
 
 
 
@@ -439,11 +379,27 @@ UK}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{MANUSCRIPTS (under review, revision or in prep)}
+\section{MANUSCRIPTS (under review, revision, or in prep)}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\paper{Erscoi, L. A., Kleinherenbrink, A., \& \textbf{Guest, O.} (in prep) My Fair AI; from Pygmalion to the Present (2022). % \textit{Synthese}. %\newline
-% \href{https://doi.org/10.48550/arXiv.2202.08674}{doi.org/10.48550/arXiv.2202.08674}
+\paper{\textbf{Guest, O.} (in prep) What makes a good scientific theory? \textit{Invited for Lorentz workshop special issue of Computational Brain \& Behavior}
+}{}
+
+
+\paper{van Rooij, I.,  \textbf{Guest, O.}, Adolfi, F., Kolokolova, A., \& Rich, P. (in prep) Reclaiming AI as theoretical tool for cognitive science. \textit{Invited for Lorentz workshop special issue of Computational Brain \& Behavior}
+}{}
+
+\paper{Rich, P., Adolfi, F., Field, S. M., Fusaroli, R., \textbf{Guest, O.}, Hartley, T., Nuñez Hernandez, N. A., van de Braak, L., van Rooij, Iris (in prep) The Role of Community in Theoretical Research. \textit{Invited for Lorentz workshop special issue of Computational Brain \& Behavior}
+}{}
+
+\paper{Teaching about theorising; theorising about teaching (in prep) Fusaroli R., De Santo, A., \textbf{Guest, O.}, Woensdregt, M., Adolfi, F., Todorovikj, S., Vermillet, A.-Q., Hartley, T., van Rooij, I., Skewes, J. \textit{Invited for Lorentz workshop special issue of Computational Brain \& Behavior}
+}{}
+
+
+
+\paper{Zgonnikov, A., Thill, S., Fau, P. B., Jonker, C. M., \textbf{Guest, O.} (in prep) Modeling Human Behavior in HRI: Why, What, and How. }{}
+
+\paper{Erscoi, L. A., Kleinherenbrink, A., \& \textbf{Guest, O.} (in prep) My Fair AI: Humanising Artificial Intelligence by Dehumanising Women.
 }{}
 
 \paper{\textbf{Guest, O.}, van Rooij, I., \& Martin, A. E. (in prep; invited to special issue) What are our models really, and are models real? How metatheoretical calculi can obtain in cognitive computational neuroscience (2022). \textit{Synthese}. %\newline
@@ -454,9 +410,11 @@ UK}
 \href{https://doi.org/10.31234/osf.io/tbmcg}{doi.org/10.31234/osf.io/tbmcg}}{}
 
 
-\paper{Forbes, S. H., Aneja, P., \& \textbf{Guest, O.} (under review in special issue). The Myth of Normative Development. \textit{Infant and Child Development}. \newline
+
+\paper{Forbes, S. H., Aneja, P., \& \textbf{Guest, O.} (accepted in special issue). The Myth of Normative Development. \textit{Infant and Child Development}. \newline
 \href{https://doi.org/10.31234/osf.io/ajynp}{doi.org/10.31234/osf.io/ajynp}}{}
  
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -538,11 +496,11 @@ Cooper, R. P. \& \textbf{Guest, O.} (2014).  {Implementations are not specificat
 % {The specification of a computational theory, and the details of the way one implements that specification in a simulation, are importantly different. Failure to fully appreciate this difference can lead to undetected poor reproducibilty. Replication of a model's predictions through independent implementation of a set of clear specifications is one answer.}
 
 % \vspace{8pt}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{CONFERENCE PROCEEDINGS}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\vspace{-4pt}
 
 \paper{
 Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). \href{https://mindmodeling.org/cogsci2017/papers/0283/index.html}{Deep Networks as Models of Human and Animal Categorization}. \textit{In Proceedings of the 39th Annual Meeting of	the	Cognitive Science	Society}.}
@@ -585,8 +543,125 @@ Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). 
 \href{https://doi.org/10.31234/osf.io/vj5tu}{doi.org/10.31234/osf.io/vj5tu}}{}
  
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{AWARDS, FELLOWSHIPS, \& GRANTS}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{-6pt}
+\begin{outerlist}
 
 
+\item [\textbf{\href{}{Aarhus Education Collaboration}}:] \euro 40,000 \hfill \textbf{2022--}
+ 
+\begin{innerlist}
+  \item Radboud-Aarhus theoretical modelling internship (with Joshua Skewes)
+
+ \end{innerlist}
+
+\item [\textbf{\href{https://www.ru.nl/radboudinternational/english/internationalisation/radboud-western-collaboration-fund/}{Western-Radboud Collaboration Fund (co-applicant)}}] \hfill \textbf{2022--}
+ 
+\begin{innerlist}
+  \item Partner in collaboration on governance of artificial intelligence (AI) systems.
+
+ \end{innerlist}
+ 
+% \item [\textbf{\href{https://ru.nl}{DCC Student Assistantship Funding}}] \hfill \textbf{2022}
+ 
+%\begin{innerlist}
+%  \item Funding for mentoring a student assistant for a project on multiple realisability; to aid in creation of a computer simulation environment.
+% \end{innerlist}
+ 
+
+
+\item[\textbf{\href{https://shuttleworthfoundation.org/fellows/flash-grants/}{Shuttleworth Foundation Flash Grant}}: \$5,000] \hfill \textbf{2021}
+\begin{innerlist}
+  \item Funding is in recognition of my work as a ``social change agent'', based on nominations from Shuttleworth Flash Fellows.
+\end{innerlist}
+
+\item [\textbf{\href{https://ru.nl}{Nomination for Faculty of Social Sciences Junior Education Prize}}] \hfill \textbf{2021}
+ 
+\begin{innerlist}
+  \item Nominated by the student representatives of the BSc Degree Programme Committee.
+ \end{innerlist}
+
+
+\item[\textbf{\href{https://www.software.ac.uk/about/fellows/olivia-guest}{Software Sustainability Institute Fellowship}}: £3,000] \hfill \textbf{2017}
+   
+
+\end{outerlist}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{TEACHING}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\textbf{\href{https://www.ru.nl/courseguides/socsci/bachelor/artificial-intelligence/ai-department/who-we/}{School of Artificial Intelligence}, \href{https://ru.nl}{Radboud}, NL}
+\begin{outerlist}
+    \item[Assistant Professor] \hfill \textbf{2021--}
+    \item[Postdoctoral Research Assistant] \hfill \textbf{2021}
+    \item[\textit{\href{https://www.ru.nl/courseguides/socsci/courses-osiris/ai/sow-bki332-ai-science/}{AI as a Science}}] \
+  \begin{innerlist}
+    \item Module: 3EC \textit{Third Year, B.Sc.}
+    \item Designed course from the ground up.
+    \item Redesigned course (since in its 2nd year it has 10 times the students; from 5 to 50).
+  \end{innerlist}
+      \item[\textit{\href{https://www.ru.nl/courseguides/socsci/courses-osiris/ai/sow-mki56-theoretical-foundations-for-cognitive/}{Theoretical Foundations for Cognitive Agents}}] \
+  \begin{innerlist}
+    \item Module: 6EC \textit{M.Sc.}
+    \item Redesigned course from the ground up.
+  \end{innerlist}
+\end{outerlist}
+\vspace{8pt}
+
+
+
+\textbf{\href{http://www.psy.ox.ac.uk/}{Department of Experimental Psychology}, \href{http://ox.ac.uk/}{University of Oxford}, UK}
+\begin{outerlist}
+    \item[Postdoctoral Research Assistant] \hfill \textbf{2014--2016}
+    \item[\textit{\href{http://oliviaguest.com/connectionism}{Block Practical: Connectionist Models and Cognitive Processes}}] \
+  \begin{innerlist}
+    \item Module: \textit{Third Year, B.Sc.}
+    \item Designed course structure and materials (slides and exercises).
+    \item Students replicated from scratch Tyler et al. (2000) in Python.
+    \item Created course website: \href{http://oliviaguest.com/connectionism}{oliviaguest.com/connectionism}.
+  \end{innerlist}
+      \item[\textit{Tutorial: Language and Cognition}] \
+  \begin{innerlist}
+    \item Module: \textit{Second Year, B.Sc.}
+    \item Set essays and marked exams.
+  \end{innerlist}
+\end{outerlist}
+\vspace{8pt}
+
+\textbf{\href{http://www.bbk.ac.uk/psychology/}{Department of Psychological Sciences}, \href{http://www.bbk.ac.uk/}{Birkbeck, University of London},
+UK}
+\begin{outerlist}
+   \item[Graduate Teaching Assistant] \hfill \textbf{2010--2014}
+   \item Modules Taught: \textit{General Foundations of Psychology,
+   Psychobiology, Advanced Research Methods, Advanced Quantitative Methods, Memory and Cognition, Matlab Programming for Psychological Science, }
+\end{outerlist}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{ACADEMIC SERVICE}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{-10pt}
+
+\begin{outerlist}
+
+\item[\textbf{Diversity, Equity and Inclusion in Artificial Intelligence} (0.2fte, 8 hours/week)] \hfill 2022--
+
+\item[\textbf{Track leader of (prospective) CompCogSci MSc AI subspecialisation}] \hfill 2022--
+
+\item[\textbf{Member of Master's Artificial Intelligence Degree Programme Committee}] \hfill 2022--
+
+\item[\textbf{Member of evaluation committee for Internal DCC PhD round 2022}] \hfill 2022
+\end{outerlist}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{SELECTED INVITED\texorpdfstring{\newline}{ }TALKS, PANELS \& WORKSHOPS}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -962,7 +1037,7 @@ in Human-Robot Interactions}}
   \begin{innerlist}
     \item Topic: Women and Gender Minorities in Computational Cognitive Science: Sharing Experiences.
     \item Co-organised with Nora S. Newcombe.
-    % \item Panel members: Eliana Colunga, Amy Perfors, and myself.
+    % \item Panel members: Eliana Colunga, Andy Perfors, and myself.
   \end{innerlist}
 \end{outerlist}
 \vspace{8pt}
@@ -1049,7 +1124,20 @@ in Human-Robot Interactions}}
 \end{innerlist}
 \end{outerlist}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{REVIEWING}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{-6pt}
 
+ \item[\textbf{Conferences (ad hoc reviewing)}] \hfill
+           \begin{innerlist}
+          \item []    International Conference on Learning Representations (ICLR), International Conference on Cognitive Modelling (ICCM), International Conference on Machine Learning (ICML), Scientific Computing with Python Conference (SciPy), EnviroInfo.
+        \end{innerlist}
+  
+   \item[\textbf{Journals (ad hoc reviewing)}] \hfill
+          \begin{innerlist}
+          \item [] Cognitive Neuropsychology,  Cognitive Psychology, Cognitive Science Journal, Journal of Cognitive Neuroscience, Journal of Open Source Education, Memory \& Cognition, PeerJ, PLoS Computational Biology, Royal Society Open Science, Topics in Cognitive Science.
+        \end{innerlist}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{TECHNICAL\texorpdfstring{\newline}{ }SKILLS}
@@ -1129,5 +1217,9 @@ Ada, C, \CC, C\#, Java, JavaScript, \LaTeX, MATLAB,  OpenGL, Pascal, PHP, Prolog
 %   \item[Software:] Caladown
   
 %   \end{description}
+
+
+
+
 \end{document}
 % %%%%%%%%%%%%%%%%%%%%%%%%%% End CV Document %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
