Updates from Overleaf

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -296,7 +296,7 @@
  
    % \item[\textbf{Donders Centre for Cognition, Radboud University, Netherlands, Assistant Professor}] \hfill \textbf{2021--}
     
-     \item[\textbf{Computational Cognitive Science (CCS) group}] \hfill 2022
+     \item[\textbf{Computational Cognitive Science (CCS) group}] \hfill \textbf{2022--}
 
       \begin{innerlist}
        \item mentoring of junior assistant professor and postdoc
