Updates from Overleaf

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -652,13 +652,13 @@ UK}
 
 \begin{outerlist}
 
-\item[\textbf{Diversity, Equity and Inclusion in Artificial Intelligence} (0.2fte, 8 hours/week)] \hfill 2022--
+\item[\textbf{Diversity, Equity and Inclusion in Artificial Intelligence} (0.2fte, 8 hours/week)] \hfill \textbf{2022--}
 
-\item[\textbf{Track leader of (prospective) CompCogSci MSc AI subspecialisation}] \hfill 2022--
+\item[\textbf{Track leader of (prospective) CompCogSci MSc AI subspecialisation}] \hfill \textbf{2022--}
 
-\item[\textbf{Member of Master's Artificial Intelligence Degree Programme Committee}] \hfill 2022--
+\item[\textbf{Member of Master's Artificial Intelligence Degree Programme Committee}] \hfill \textbf{2022--}
 
-\item[\textbf{Member of evaluation committee for Internal DCC PhD round 2022}] \hfill 2022
+\item[\textbf{Member of evaluation committee for Internal DCC PhD round 2022}] \hfill \textbf{2022}
 \end{outerlist}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
